--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,17 @@ spring:
     url: jdbc:mysql://localhost:3306/mytest?characterEncoding=utf8&useSSL=true
     username: root
     password: rootXKY123
+  redis:
+    host: localhost
+    port: 6379
+    timeout: 6000
+#    password:
+    jedis:
+      pool:
+        max-active: 1000
+        max-wait: -1
+        max-idle: 10
+        min-idle: 5
 mybatis:
   mapper-locations: classpath:mybatis/*.xml
   type-aliases-package: com.aike.xky.as_api.entity
